# MLOps_RecruitAIr_CriteriaEvaluator

./: .gitignore  Dockerfile  Makefile  README.md  compose.yaml  dvc.yaml  monitoring.py  payload.json  prometheus.yml  pyproject.toml  requirements.txt
.dvc/: config
.github/workflows/: build-on-tag.yaml  linting.yml  test.yml  typing.yml
data/interim/: .gitignore
data/processed/: .gitignore
data/raw/: .gitignore
grafana/provisioning/dashboards/: dashboard.yaml
graphana_dashboards/: recruitair_api.json
mlruns/0/: meta.yaml
notebooks/: explore-input.ipynb  explore-qwen-architecture.ipynb  train-custom-qwen.ipynb  transfer-learning-architecture.ipynb  use-model.ipynb
recruitair/: __init__.py  dataset.py  features.py  plots.py
recruitair/api/: config.py  dependencies.py  main.py  model.py  monitoring.py  schemas.py
recruitair/api_evaluator/: config.py  dependencies.py  main.py  model.py  schemas.py
recruitair/api_evaluator/tests/: test_api.py
recruitair/config/: config_base.py  data_preprocess_config.py  data_split_config.py
recruitair/data/: download_raw_dataset.py  preprocess_json.py  split_data.py  test_download_raw_dataset.py  test_preprocess_json.py  test_split_data.py  validate_data.py
recruitair/job_offers/: extract_criteria.py
recruitair/modeling/: custom_qwen.py  predict.py  test_custom_qwen.py  tokenize.py  train.py
references/: criteria-evaluation-requirements.md
reports/: dataset_card_jobs.md  model_card.md
tests/: test_api.py
