[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "recruitair"
version = "0.0.1"
description = "ML system to evaluate the fit of an applicant profile to user-defined criteria."
authors = [
  { name = "RecruitAIr team" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
dependencies = [
    "black",
    "dagshub>=0.6.3",
    "dvc>=3.63.0",
    "dvc-s3>=3.2.2",
    "flake8",
    "huggingface-hub>=0.35.3",
    "isort",
    "kagglehub>=0.3.13",
    "loguru",
    "pip",
    "python-dotenv",
    "scikit-learn>=1.7.2",
    "tqdm",
    "typer",
]
requires-python = "~=3.10.0"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.isort]
profile = "black"
known_first_party = ["recruitair"]
force_sort_within_sections = true


