[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[[tool.uv.index]]
name = "pytorch-cuda"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cuda" },
]

[project]
name = "recruitair"
version = "0.0.1"
description = "ML system to evaluate the fit of an applicant profile to user-defined criteria."
authors = [
  { name = "RecruitAIr team" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
dependencies = [
    "accelerate>=1.10.1",
    "black",
    "dagshub>=0.6.3",
    "dvc>=3.63.0",
    "dvc-s3>=3.2.2",
    "flake8",
    "huggingface-hub>=0.35.3",
    "ipykernel>=6.30.1",
    "isort",
    "kagglehub>=0.3.13",
    "langchain-ollama>=0.3.10",
    "loguru",
    "mlflow>=3.4.0",
    "mypy>=1.18.2",
    "pandas-stubs>=2.3.2.250926",
    "pip",
    "pylint>=3.3.9",
    "pynblint>=0.1.6",
    "python-dotenv",
    "ruff>=0.13.3",
    "scikit-learn>=1.7.2",
    "tensorflow>=2.20.0",
    "tf-keras>=2.20.1",
    "torch>=2.8.0",
    "torchviz>=0.0.3",
    "tqdm",
    "transformers>=4.57.0",
    "typer",
    "types-tqdm>=4.67.0.20250809",
]
requires-python = "~=3.10.0"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.isort]
profile = "black"
known_first_party = ["recruitair"]
force_sort_within_sections = true

[[tool.mypy.overrides]]
module = ["sklearn.*", "kagglehub"]
follow_untyped_imports = true
