[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[[tool.uv.index]]
name = "pytorch-cuda"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cuda", marker = "sys_platform == 'win32'" },
  { index = "pytorch-cuda", marker = "sys_platform == 'linux'" },
  { index = "pytorch-cpu", marker = "sys_platform == 'darwin'" },
]
torchvision = [
  { index = "pytorch-cuda", marker = "sys_platform == 'win32'" },
  { index = "pytorch-cuda", marker = "sys_platform == 'linux'" },
  { index = "pytorch-cpu", marker = "sys_platform == 'darwin'" },
]

[project]
name = "recruitair"
version = "0.0.1"
description = "ML system to evaluate the fit of an applicant profile to user-defined criteria."
authors = [
  { name = "RecruitAIr team" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
dependencies = [
    "accelerate>=1.10.1",
    "black",
    "codecarbon>=3.0.6",
    "dagshub>=0.6.3",
    "dvc>=3.63.0",
    "dvc-s3>=3.2.2",
    "flake8",
    "huggingface-hub>=0.35.3",
    "ipykernel>=6.30.1",
    "isort",
    "kagglehub>=0.3.13",
    "langchain-ollama>=0.3.10",
    "loguru",
    "mlflow>=3.3.2",
    "mypy>=1.18.2",
    "pandas-stubs>=2.3.2.250926",
    "pip",
    "pylint>=3.3.9",
    "pynblint>=0.1.6",
    "pytest>=8.4.2",
    "python-dotenv",
    "ruff>=0.13.3",
    "scikit-learn>=1.7.2",
    "tensorflow>=2.20.0",
    "tf-keras>=2.20.1",
    "torch>=2.8.0",
    "torchviz>=0.0.3",
    "tqdm",
    "transformers>=4.57.0",
    "typer",
    "types-tqdm>=4.67.0.20250809",
]
requires-python = "~=3.10.0"

[dependency-groups]
dev = [
    "great-expectations>=1.7.0",
    "pandas>=2.3.3",
]

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.isort]
profile = "black"
known_first_party = ["recruitair"]
force_sort_within_sections = true

[[tool.mypy.overrides]]
module = ["sklearn.*", "kagglehub"]
follow_untyped_imports = true
